--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
-# Database
-DATABASE_URL="file:./dev.db"
+# Vercel Postgres - Replace with your connection strings after linking
+DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require"
+DIRECT_URL="postgresql://user:password@host:5432/database?sslmode=require"
 
-# Optional: Add these for future features
-# NEXTAUTH_SECRET="your-secret-key-here"
-# NEXTAUTH_URL="http://localhost:3000"
-# OPENAI_API_KEY="your-openai-key-here"
+# NextAuth.js
+AUTH_SECRET="your-super-secret-key-change-this-in-production"
+NEXTAUTH_URL="http://localhost:3000"
+
+# Email (Resend) - Add your key from resend.com
+RESEND_API_KEY=""
+
+# AI (OpenAI) - Add your key from platform.openai.com
+OPENAI_API_KEY=""
