--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-virtual": "^3.13.12",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.3",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
@@ -29,8 +31,10 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "next": "15.5.5",
+    "next-auth": "^5.0.0-beta.30",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
+    "openai": "^6.18.0",
     "prisma": "^6.17.1",
     "qrcode.js": "^0.0.1",
     "react": "19.1.0",
@@ -40,6 +44,7 @@
     "react-hook-form": "^7.65.0",
     "react-spring": "^10.0.3",
     "recharts": "^3.2.1",
+    "resend": "^6.9.1",
     "sonner": "^2.0.7",
     "tailwindcss-animate": "^1.0.7",
     "use-sound": "^5.0.0",
