feat: Add password reset, Google OAuth, cron jobs, monthly reports, and fix loan application API
- Add password reset functionality with email verification
- Integrate Google OAuth for admin login
- Add automated overdue payment notifications (cron job)
- Add monthly summary report generation
- Fix loan application API (Resend initialization issue)
- Update email service with lazy initialization
- Add vercel.json for cron configuration
- Prepare for Vercel deployment

--- a/.env
+++ b/.env
@@ -1,13 +1,19 @@
-# Vercel Postgres - Replace with your connection strings after linking
-DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require"
-DIRECT_URL="postgresql://user:password@host:5432/database?sslmode=require"
+# SQLite Database (Local Development)
+DATABASE_URL="file:./dev.db"
 
 # NextAuth.js
-AUTH_SECRET="your-super-secret-key-change-this-in-production"
+AUTH_SECRET="XWIJJDdWS8l7zlv8A3iO67ceP9ddIXnkfoZ2T7FTZmA="
 NEXTAUTH_URL="http://localhost:3000"
 
-# Email (Resend) - Add your key from resend.com
+# Email (Resend) - Optional, get key from resend.com
 RESEND_API_KEY=""
 
-# AI (OpenAI) - Add your key from platform.openai.com
+# AI (OpenAI) - Optional, get key from platform.openai.com  
 OPENAI_API_KEY=""
+
+# Google OAuth - Get from Google Cloud Console
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+# Cron Jobs - Generate a random secret for production
+CRON_SECRET=""
