config: Set RESEND_API_KEY and CRON_SECRET values in the environment file.

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ AUTH_SECRET="XWIJJDdWS8l7zlv8A3iO67ceP9ddIXnkfoZ2T7FTZmA="
 NEXTAUTH_URL="http://localhost:3000"
 
 # Email (Resend) - Optional, get key from resend.com
-RESEND_API_KEY=""
+RESEND_API_KEY="re_dgu9uEZ3_MTx9mwV4NeQ5BHgxY27K2AXY"
 
 # AI (OpenAI) - Optional, get key from platform.openai.com  
 OPENAI_API_KEY=""
@@ -19,6 +19,6 @@ GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 
 # Cron Jobs - Generate a random secret for production
-CRON_SECRET=""
+CRON_SECRET="fhO6nS6IWopOAq2+dhHfgMEI9BryWLe+3C734Zmk+QQ="
 
 
